# resumeapp

./: .gitignore  ReadMe.md  app.py  config.py  main.py  pyproject.toml  render-build.sh  requirements.txt
.github/workflows/: deploy.yml  test.yml
services/: ats_service.py  jd_extraction_service.py  resume_service.py  tailor_service.py
templates/: index.html
