[project]
name = "custom-jd-resume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "google-genai>=1.66.0",
    "python-docx>=1.2.0",
    "requests>=2.32.5",
    "docx2pdf>=0.1.8",
    "gunicorn>=21.2.0",
]
