[project]
name = "custom-jd-resume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "google-genai>=1.66.0",
    "python-docx>=1.2.0",
    "requests>=2.32.5",
    "gunicorn>=21.2.0",
    "playwright>=1.58.0",
    "beautifulsoup4>=4.14.3",
]
